fixing header section

--- a/index.html
+++ b/index.html
@@ -79,12 +79,43 @@
                         <li>
                           <a href="#"
                             >Home <i class="far fa-plus"></i></a>
-                          <ul class="rt-header-sub-menu text-start">
-                            <li><a href="#"> Home 1</a></li>
-                            <li><a href="#"> Home 2</a></li>
-                            <li><a href="#"> Home 3</a></li>
-                            <li><a href="#"> Home 4</a></li>
-                            <li><a href="#"> Home 5</a></li>
+                          <ul class="rt-header-sub-menu text-start pf__heading-mega-menu">
+                            <li>
+                              <div class="pf__heading-mega-menu-item">
+                                <div class="pf__heading-mega-menu-thumb">
+                                  <img src="./assets/img/header/mega-menu-img-1.jpg" alt="">
+                                </div>
+                              </div>
+                            </li>
+                            <li>
+                              <div class="pf__heading-mega-menu-item">
+                                <div class="pf__heading-mega-menu-thumb">
+                                  <img src="./assets/img/header/mega-menu-img-2.jpg" alt="">
+                                </div>
+                              </div>
+                            </li>
+                            <li>
+                              <div class="pf__heading-mega-menu-item">
+                                <div class="pf__heading-mega-menu-thumb">
+                                  <img src="./assets/img/header/mega-menu-img-3.jpg" alt="">
+                                </div>
+                              </div>
+                            </li>
+                            <li>
+                              <div class="pf__heading-mega-menu-item">
+                                <div class="pf__heading-mega-menu-thumb">
+                                  <img src="./assets/img/header/mega-menu-img-4.jpg" alt="">
+                                </div>
+                              </div>
+                            </li>
+                            <li>
+                              <div class="pf__heading-mega-menu-item">
+                                <div class="pf__heading-mega-menu-thumb">
+                                  <img src="./assets/img/header/mega-menu-img-5.jpg" alt="">
+                                </div>
+                              </div>
+                            </li>
+
                           </ul>
                         </li>
                         <li><a href="#">Aboute us </a></li>
