fixing hero section

--- a/index.html
+++ b/index.html
@@ -210,7 +210,140 @@
     <!-- header end  -->
 
     <main>
+      <!-- hero start  -->
+       <section class="pf__hero-area bg-hero-color mb-200">
+               <div class="pf__hero-area-wrapper p-relative">
+                   <!-- Swiper -->
+          <div class="swiper pf__hero-slider ">
+            <div class="swiper-wrapper">
 
+              <div class="swiper-slide">
+                <div class="custom-container mx-auto hero-custom-padding p-relative">
+                  <div class="pf__hero-shape-1 p-absolute">
+                    <span><img src="./assets/img/shape/pf-hero-bg-shape-1.svg" alt=""></span>
+                  </div>
+                  <div class="pf__hero-shape-2 p-absolute">
+                    <span><img src="./assets/img/shape/pf-hero-bg-shape-2.png" alt=""></span>
+                  </div>
+                  <div class="row">
+                    <div class="col-xl-5">
+                      <div class="pf__hero-col-wrapper-1 px-2">
+                        <div class="pf__section-title">
+                          <p>New Arrival Printfix</p>
+                        <h1>Quick And Best Printing For Your Business
+                        </h1>
+                        </div>
+                        <button class="bg-secondary-color pf__btn mt-4"><span>Start Your Project</span></button>
+                      </div>
+                    </div>
+                    <div class="col-xl-3">
+                      <div class="pf__hero-col-wrapper-2 ">
+                        <span>
+                          <img src="./assets/img/hero/pf-hero-img-1.jpg" alt="">
+                        </span>
+                        <span>
+                          <img src="./assets/img/hero/pf-hero-img-2.jpg" alt="">
+                        </span>
+                      </div>
+                    </div>
+                    <div class="col-xl-4">
+                      <div class="pf__hero-col-wrapper-3 ">
+                        <p>There are many variations of passages orem psum available but the majority have suffered alteration in some form by injected.</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- items -->
+              <div class="swiper-slide ">
+                <div class="custom-container  mx-auto hero-custom-padding p-relative">
+                  <div class="pf__hero-shape-1 p-absolute">
+                    <span><img src="./assets/img/shape/pf-hero-bg-shape-1.svg" alt=""></span>
+                  </div>
+                  <div class="pf__hero-shape-2 p-absolute">
+                    <span><img src="./assets/img/shape/pf-hero-bg-shape-2.png" alt=""></span>
+                  </div>
+                  <div class="row">
+                    <div class="col-xl-5">
+                      <div class="pf__hero-col-wrapper-1 px-2">
+                        <div class="pf__section-title">
+                          <p>New Arrival Printfix</p>
+                        <h1>Quick And Best Printing For Your Business
+                        </h1>
+                        </div>
+                        <button class="bg-secondary-color pf__btn mt-4"><span>Start Your Project</span></button>
+                      </div>
+                    </div>
+                    <div class="col-xl-3">
+                      <div class="pf__hero-col-wrapper-2 ">
+                        <span>
+                          <img src="./assets/img/hero/pf-hero-img-1.jpg" alt="">
+                        </span>
+                        <span>
+                          <img src="./assets/img/hero/pf-hero-img-2.jpg" alt="">
+                        </span>
+                      </div>
+                    </div>
+                    <div class="col-xl-4">
+                      <div class="pf__hero-col-wrapper-3 ">
+                        <p>There are many variations of passages orem psum available but the majority have suffered alteration in some form by injected.</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- items -->
+              <div class="swiper-slide">
+                <div class="custom-container mx-auto hero-custom-padding p-relative">
+                  <div class="pf__hero-shape-1 p-absolute">
+                    <span><img src="./assets/img/shape/pf-hero-bg-shape-1.svg" alt=""></span>
+                  </div>
+                  <div class="pf__hero-shape-2 p-absolute">
+                    <span><img src="./assets/img/shape/pf-hero-bg-shape-2.png" alt=""></span>
+                  </div>
+                  <div class="row">
+                    <div class="col-xl-5">
+                      <div class="pf__hero-col-wrapper-1 px-2">
+                        <div class="pf__section-title">
+                          <p>New Arrival Printfix</p>
+                        <h1>Quick And Best Printing For Your Business
+                        </h1>
+                        </div>
+                        <button class="bg-secondary-color pf__btn mt-4"><span>Start Your Project</span></button>
+                      </div>
+                    </div>
+                    <div class="col-xl-3">
+                      <div class="pf__hero-col-wrapper-2 ">
+                        <span>
+                          <img src="./assets/img/hero/pf-hero-img-1.jpg" alt="">
+                        </span>
+                        <span>
+                          <img src="./assets/img/hero/pf-hero-img-2.jpg" alt="">
+                        </span>
+                      </div>
+                    </div>
+                    <div class="col-xl-4">
+                      <div class="pf__hero-col-wrapper-3 ">
+                        <p>There are many variations of passages orem psum available but the majority have suffered alteration in some form by injected.</p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <!-- items -->
+              
+            </div>
+            <div class="pf__hero-slider-btn p-absolute d-flex align-items-center gap-3">
+              <div class="pf__hero-next-btn"><i class="far fa-arrow-left"></i></div>
+            <div class="pf__hero-prev-btn"><i class="far fa-arrow-right"></i></div>
+            </div>
+          </div>
+
+          <!-- Swiper JS -->
+        
+               </div>
+       </section>
+      <!-- hero end -->
     </main>
 
     <footer>
