--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                 <div
                   class="rt-header-right-part d-flex align-items-center gap-3 me-5 pe-5"
                 >
-                <div class="rt-header-icon d-none d-md-block">
+                <div class="rt-header-icon ">
                   <span>
                  <!--  -->
                   <div class="d-flex align-items-center gap-2">
@@ -191,7 +191,7 @@
                   </span>
                 </button>
                   </div>
-                 <!--  -->
+                  <!--  -->
                 </div>
                 <div class="pf__heading-icon ">
                   <a href="#" class="d-flex align-items-center gap-3"> Let’s Talk
@@ -211,7 +211,7 @@
 
     <main>
       <!-- hero start  -->
-       <section class="pf__hero-area bg-hero-color mb-200 p-relative">
+       <section class="pf__hero-area bg-hero-color p-relative">
                    
         <div class="pf__hero-slider-btn p-absolute d-flex align-items-center gap-3">
           <div class="pf__hero-next-btn"><i class="far fa-arrow-left"></i></div>
@@ -282,10 +282,10 @@
                    <div class="col-xl-3">
                      <div class="pf__hero-col-wrapper-2 ">
                        <span>
-                         <img src="./assets/img/hero/pf-hero-img-1.jpg" alt="">
+                         <img src="./assets/img/hero/pf-hero-img-3.jpg" alt="">
                        </span>
                        <span>
-                         <img src="./assets/img/hero/pf-hero-img-2.jpg" alt="">
+                         <img src="./assets/img/hero/pf-hero-img-5.jpg" alt="">
                        </span>
                      </div>
                    </div>
@@ -344,6 +344,52 @@
                </div>
        </section>
       <!-- hero end -->
+
+      <!-- text-branding start  -->
+       <section class="pf__text-brand-area mb-200 ">
+        <div class="pf__text-brand-wrapper pt-80 pb-80 border">
+          <div class="container">
+            <div class="row ">
+              <div class="col-md-3">
+                <div class="pf__text-brand-col-1 d-flex align-items-center gap-2  ">
+                  <span>
+                    <img src="./assets/img/icon/home-1/pf-text-brand-icon-1.png" alt="">
+                  </span>
+                  <h6 class="m-0 p-0">Free Delivery Worldwide</h6>
+                </div>
+              </div>
+              
+              <div class="col-md-3">
+                <div class="pf__text-brand-col-2 d-flex align-items-center gap-2  ">
+                  <span>
+                    <img src="./assets/img/icon/home-1/pf-text-brand-icon-2.png" alt="">
+                  </span>
+                  <h6 class="m-0 p-0">30 Day Online Returns</h6>
+                </div>
+              </div>
+              <div class="col-md-3">
+                <div class="pf__text-brand-col-3 d-flex align-items-center gap-2  ">
+                  <span>
+                    <img src="./assets/img/icon/home-1/pf-text-brand-icon-3.png" alt="">
+                  </span>
+                  <h6 class="m-0 p-0">Top-Notch Support</h6>
+                </div>
+              </div>
+              <div class="col-md-3">
+                <div class="pf__text-brand-col-4 d-flex align-items-center gap-2  ">
+                  <span>
+                    <img src="./assets/img/icon/home-1/pf-text-brand-icon-4.png" alt="">
+                  </span>
+                  <h6 class="m-0 p-0">Low Price Guarantee</h6>
+                </div>
+              </div>
+
+            </div>
+          </div>
+        </div>
+       </section>
+      <!-- text-branding end -->
+
     </main>
 
     <footer>
