fixing discount card

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
  
   <body>
 
-    <!-- header start  -->
+    <!-- start header   -->
     <header >
       <div class="rt-header-area p-4 p-xl-0 bg-light shadow">
         <div class="pf__heading-top bg-primary-color d-flex align-items-center justify-content-around">
@@ -207,10 +207,10 @@
         </div>
       </div>
     </header>
-    <!-- header end  -->
+    <!--end header   -->
 
     <main>
-      <!-- hero start  -->
+      <!--start hero section -->
        <section class="pf__hero-area bg-hero-color p-relative">
                    
         <div class="pf__hero-slider-btn p-absolute d-flex align-items-center gap-3">
@@ -343,11 +343,11 @@
               </div>
                </div>
        </section>
-      <!-- hero end -->
+      <!--end hero section -->
 
-      <!-- text-branding start  -->
-       <section class="pf__text-brand-area mb-200 ">
-        <div class="pf__text-brand-wrapper pt-80 pb-80 border">
+      <!-- start text-branding section -->
+       <section class="pf__text-brand-area ">
+        <div class="pf__text-brand-wrapper pt-80 pb-80">
           <div class="container">
             <div class="row ">
               <div class="col-md-3">
@@ -388,7 +388,81 @@
           </div>
         </div>
        </section>
-      <!-- text-branding end -->
+      <!-- end text-branding section -->
+
+      <!--start discount section  -->
+       <section class="pf__discount-area section-space-mb">
+        <div class="pf__discount-wrapper">
+          <div class="container">
+            <div class="row">
+              <div class="col-md-4">
+                <div class="pf__discount-card bg-discount-card-1 border d-flex rounded-3 p-relative">
+                  <div class="pf__discount-shape-1 p-absolute">
+                    <img src="./assets/img/shape/pf-discount-card-shape-1.png" alt="">
+                  </div>
+                  <div class="pf__discount-shape-2 p-absolute">
+                    <img src="./assets/img/shape/pf-discount-card-shape-2.png" alt="">
+                  </div>
+                  <div class="#">
+                    <p>Flat 25% off</p>
+                    <h4>Give The Gift Of Choice</h4>
+                    <button class="pf__btn border text-primary-color text-primary-color mt-4">Shop Now</button>
+                  </div>
+                  <div class="#">
+                    <span>
+                      <img src="./assets/img/discount/pf-discount-img-1.jpg" alt="">
+                    </span>
+                  </div>
+                </div>
+              </div>
+              <!-- items -->
+              <div class="col-md-4">
+                <div class="pf__discount-card bg-discount-card-2 border d-flex rounded-3 p-relative">
+                  <div class="pf__discount-shape-1 p-absolute">
+                    <img src="./assets/img/shape/pf-discount-card-shape-1.png" alt="">
+                  </div>
+                  <div class="pf__discount-shape-2 p-absolute">
+                    <img src="./assets/img/shape/pf-discount-card-shape-2.png" alt="">
+                  </div>
+                  <div class="#">
+                    <p>Flat 25% off</p>
+                    <h4>Give The Gift Of Choice</h4>
+                    <button class="pf__btn border text-primary-color text-primary-color mt-4">Shop Now</button>
+                  </div>
+                  <div class="#">
+                    <span>
+                      <img src="./assets/img/discount/pf-discount-img-2.jpg" alt="">
+                    </span>
+                  </div>
+                </div>
+              </div>
+              <!-- items -->
+              <div class="col-md-4">
+                <div class="pf__discount-card bg-discount-card-3 border d-flex rounded-3 p-relative">
+                  <div class="pf__discount-shape-1 p-absolute">
+                    <img src="./assets/img/shape/pf-discount-card-shape-1.png" alt="">
+                  </div>
+                  <div class="pf__discount-shape-2 p-absolute">
+                    <img src="./assets/img/shape/pf-discount-card-shape-2.png" alt="">
+                  </div>
+                  <div class="#">
+                    <p>Flat 25% off</p>
+                    <h4>Give The Gift Of Choice</h4>
+                    <button class="pf__btn border text-primary-color text-primary-color mt-4">Shop Now</button>
+                  </div>
+                  <div class="#">
+                    <span>
+                      <img src="./assets/img/discount/pf-discount-img-3.jpg" alt="">
+                    </span>
+                  </div>
+                </div>
+              </div>
+              <!-- items -->
+            </div>
+          </div>
+        </div>
+       </section>
+      <!--end discount section  -->
 
     </main>
 
