end popup section

--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
       <!--end discount section  -->
 
       <!-- start product section  -->
-       <section class="pf__product-area bg-product-color mb-200">
+       <section class="pf__product-area bg-product-color ">
         <div class="container">
           <div class="pf__product-content section-padding-py">
             <div class="pf__product-title text-center">
@@ -1247,6 +1247,46 @@
         </div>
        </section>
       <!-- end product section  -->
+
+      <!-- start popup section  -->
+       <section class="pf__popup-area mb-200 border " style="background: url(./assets/img/bg/popup-bg-img.jpg) center / cover no-repeat;">
+        <div class="pf__popup-wrapper">
+          <img src="" alt="">
+          <div class="pf__popup-shape">
+            <div class="pf__popup-shape-1">
+              <img src="" alt="">
+            </div>
+          </div>
+          <div class="container">
+            <div class="pf__popup-content  ">
+              <div class="row align-items-center">
+                <div class="col-xl-6">
+                  <div class="pf__popup-col-wrapper-1">
+                    <p class="text-secondary-color mb-2">100% Original Products</p>
+                    <h1>Peach Color Up Neck <br>
+                      Blouson Top.</h1>
+                      <h6>This Month From $59.00</h6>
+                      <div class="pf__popup-play-btn-wrapper d-flex align-items-center gap-4 mt-4 ">
+                        <button class="pf__btn bg-secondary-color"> Shop Now </button>
+                          <a href="#">
+                            <img class="mt-1" src="./assets/img/icon/home-1/pf-popup-play-btn-icon-1.png" alt="">
+                          </a>
+                      </div>
+                  </div>
+                </div>
+                <div class="col-xl-6">
+                  <div class="pf__popup-col-wrapper-2 ">
+                    <div class="pf__popup-img">
+                      <img src="./assets/img/popup/pf-popup-t-shirt-img-1.jpg" alt="">
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+       </section>
+      <!-- end popup section  -->
 
     </main>
 
