--- a/index.html
+++ b/index.html
@@ -1249,7 +1249,7 @@
       <!-- end product section  -->
 
       <!-- start popup section  -->
-       <section class="pf__popup-area mb-200 border " style="background: url(./assets/img/bg/popup-bg-img.jpg) center / cover no-repeat;">
+       <section class="pf__popup-area border " style="background: url(./assets/img/bg/popup-bg-img.jpg) center / cover no-repeat;">
         <div class="pf__popup-wrapper">
           <img src="" alt="">
           <div class="pf__popup-shape">
@@ -1287,6 +1287,142 @@
         </div>
        </section>
       <!-- end popup section  -->
+
+      <!-- start best deal section  -->
+       <section class="pf__bdeal-area mb-200 section-padding-py ">
+        <div class="pf__bdeal-wrapper">
+          <div class="container">
+            <div class="pf__bdeal-content">
+                <!-- start section title  -->
+                <div class="pf__section-title d-flex  align-items-end justify-content-between">
+                  <div>
+                    <p>Best Deal</p>
+                <h1>Best Deals Product
+                  </div>
+                </h1>
+                <div class="pf__bdeal-counter-wrapper d-flex align-items-center gap-4 ">
+                  <p>Hurry up! Offer ends in:</p>
+                  <div class="pf__bdeal-counter-content">
+                    <span>00</span>
+                  <span>00</span>
+                  <span>00</span>
+                  <span>00</span>
+                  </div>
+                </div>
+                </div>
+                <!-- end section title  -->
+
+                <div class="pf__bdeal-card-wrapper mt-5 ">
+                  <div class="row">
+                    <div class="col-xl-3">
+                      <div class="pf__bdeal-col-wrapper-1 p-20 bg-secondary-color rounded-3 fix ">
+                        <div class="pf__bdeal-card-text">
+                          <h4>Hot Deals</h4>
+                        <p>Pair text with an image to focus on your chosen product, collection, or blog post.</p>
+                        <button class="pf__btn bg-light text-dark mt-4 "> Shop Now </button>
+                        </div>
+                        <span class="pf__bdeal-card-img">
+                          <img src="./assets/img/best-deal/pf-bdeal-card-img-1.png" alt="">
+                        </span>
+                      </div>
+                    </div>
+                    <!-- copy product section card   -->
+                    <div class="col-xl-3">
+                      <div class="pf__product-card-wrapper rounded-3">
+                        <div class="pf__product-card-img">
+                          <span>-60%</span>
+                          <span class="card-hover-item-2">Hot</span>
+                          <div class="pf__product-img-icon">
+                            <div> <a href="#"><i class="fal fa-heart"></i></a> </div>
+                            <div> <a href="#"><i class="far fa-repeat-alt"></i> </a></div>
+                            <div> <a href="#"><i class="fal fa-eye"></i></a></div>
+                          </div>
+                          <img src="./assets/img/product/tabs-1-img-2.jpg" alt="tbs img">
+                        </div>
+                        <div class="pf__product-card-text p-relative">
+                          <div class="pf__product-star-icon mt-3">
+                            <img src="./assets/img/icon/home-1/product-star-fill-icon.png" alt="">
+                            <img src="./assets/img/icon/home-1/product-star-fill-icon.png" alt="">
+                            <img src="./assets/img/icon/home-1/product-star-fill-icon.png" alt="">
+                            <img src="./assets/img/icon/home-1/product-star-fill-icon.png" alt="">
+                            <img src="./assets/img/icon/home-1/product-star-transparent-icon.png" alt="">
+                          </div>
+                          <h5 class="pt-2 pb-3 m-0"><a href="#">Eco Shopping Bag</a></h5>
+                          <p>
+                            <span>$270.50</span> 
+                            <span>$230.50</span>
+                          </p>
+                          <button class="pf__btn bg-primary-color d-block w-100 p-absolute p-1 card-hover-item-1">Add To Cart</button>
+                        </div>
+                      </div>
+                    </div>
+                    <!-- items  -->
+                    <div class="col-xl-3">
+                      <div class="pf__product-card-wrapper rounded-3">
+                        <div class="pf__product-card-img">
+                          <span>-60%</span>
+                          <span class="card-hover-item-2">Hot</span>
+                          <div class="pf__product-img-icon">
+                            <div> <a href="#"><i class="fal fa-heart"></i></a> </div>
+                            <div> <a href="#"><i class="far fa-repeat-alt"></i> </a></div>
+                            <div> <a href="#"><i class="fal fa-eye"></i></a></div>
+                          </div>
+                          <img src="./assets/img/product/tabs-1-img-3.jpg" alt="tbs img">
+                        </div>
+                        <div class="pf__product-card-text p-relative">
+                          <div class="pf__product-star-icon mt-3">
+                            <img src="./assets/img/icon/home-1/product-star-fill-icon.png" alt="">
+                            <img src="./assets/img/icon/home-1/product-star-fill-icon.png" alt="">
+                            <img src="./assets/img/icon/home-1/product-star-fill-icon.png" alt="">
+                            <img src="./assets/img/icon/home-1/product-star-fill-icon.png" alt="">
+                            <img src="./assets/img/icon/home-1/product-star-transparent-icon.png" alt="">
+                          </div>
+                          <h5 class="pt-2 pb-3 m-0"><a href="#">Eco Shopping Bag</a></h5>
+                          <p>
+                            <span>$270.50</span> 
+                            <span>$230.50</span>
+                          </p>
+                          <button class="pf__btn bg-primary-color d-block w-100 p-absolute p-1 card-hover-item-1">Add To Cart</button>
+                        </div>
+                      </div>
+                    </div>
+                    <!-- items  --><div class="col-xl-3">
+                      <div class="pf__product-card-wrapper rounded-3">
+                        <div class="pf__product-card-img">
+                          <span>-60%</span>
+                          <span class="card-hover-item-2">Hot</span>
+                          <div class="pf__product-img-icon">
+                            <div> <a href="#"><i class="fal fa-heart"></i></a> </div>
+                            <div> <a href="#"><i class="far fa-repeat-alt"></i> </a></div>
+                            <div> <a href="#"><i class="fal fa-eye"></i></a></div>
+                          </div>
+                          <img src="./assets/img/product/tabs-1-img-4.jpg" alt="tbs img">
+                        </div>
+                        <div class="pf__product-card-text p-relative">
+                          <div class="pf__product-star-icon mt-3">
+                            <img src="./assets/img/icon/home-1/product-star-fill-icon.png" alt="">
+                            <img src="./assets/img/icon/home-1/product-star-fill-icon.png" alt="">
+                            <img src="./assets/img/icon/home-1/product-star-fill-icon.png" alt="">
+                            <img src="./assets/img/icon/home-1/product-star-fill-icon.png" alt="">
+                            <img src="./assets/img/icon/home-1/product-star-transparent-icon.png" alt="">
+                          </div>
+                          <h5 class="pt-2 pb-3 m-0"><a href="#">Eco Shopping Bag</a></h5>
+                          <p>
+                            <span>$270.50</span> 
+                            <span>$230.50</span>
+                          </p>
+                          <button class="pf__btn bg-primary-color d-block w-100 p-absolute p-1 card-hover-item-1">Add To Cart</button>
+                        </div>
+                      </div>
+                    </div>
+                    <!-- items  -->
+                  </div>
+                </div>
+            </div>
+          </div>
+        </div>
+       </section>
+      <!-- start best deal section  -->
 
     </main>
 
